--- a/问卷调查/Views/Shared/_MobileLayout.cshtml
+++ b/问卷调查/Views/Shared/_MobileLayout.cshtml
@@ -58,6 +58,9 @@
         .normalquestion {
             font-weight: normal;
         }
+        .warningcontent {
+            color:red;
+        }
         .paddingleft30{
             padding-left:30px;
         }
