--- a/问卷调查/Template/量表---儿童基本情况.html
+++ b/问卷调查/Template/量表---儿童基本情况.html
@@ -5,8 +5,17 @@
         border-left: 0px;
         border-right: 0px;
     }
+
+    .paddingleft30 {
+        padding-left: 30px;
+    }
+
+    .paddingleft40 {
+        padding-left: 40px;
+    }
 </style>
-<h3 class="text-center">知情同意书</h3><br>
+<h3 class="text-center">知情同意书</h3>
+<br>
 <p>尊敬的同学家长您好！</p>
 <p>&emsp;&emsp;睡眠障碍严重影响儿童健康，特别是睡眠时打鼾、憋气等所导致的睡眠效率下降及睡眠缺氧，不仅可导致儿童的生长发育迟缓，而且能够影响儿童神经认知功能的发育，从而对儿童的学习成绩等产生长期影响。</p>
 <p>&emsp;&emsp;为了早期发现儿童睡眠问题的影响，为政府部门相关卫生决策提供依据，由<strong><i>上海市教育委员会创新计划项目支持</i></strong>，上海交通大学附属第六人民医院耳鼻咽喉头颈外科（国家临床重点专科）、上海市睡眠呼吸障碍重点实验室及上海市第八人民医院体检中心共同承担，将在上海市徐汇区幼儿园及小学儿童中开展“儿童睡眠及学习行为能力的调查”</p>
@@ -41,20 +50,26 @@
     <div style="position: relative">
         <p></p>
         <p>3.您的孩子既往是否治疗过打鼾或是扁桃体/腺样体肥大？</p>
-        <div isunique="true"><input type="checkbox" id="A3_1" parent="3" desc="基本健康情况" group="A">是<input type="checkbox" id="A3_2">否</div>
-        <div>-如是，治疗方法为：</div>
-        <div isunique="true" pElement="#A3_1">
-            <div><input type="checkbox" id="A3_3">药物，药物名：<input id="A3_4" type="text" style="width:100px">何时开始？<input id="A3_5" type="text" style="width:100px">治疗持续多久？<input id="A3_6" type="text" style="width:100px"></div>
-            <div><input type="checkbox" id="A3_7">矫正口腔畸形，何时开始？<input id="A3_8" type="text" style="width:100px">治疗持续多久？<input id="A3_9" type="text" style="width:100px"></div>
-            <div><input type="checkbox" id="A3_10">佩戴呼吸机，何时开始？<input id="A3_11" type="text" style="width:100px">治疗持续多久？<input id="A3_12" type="text" style="width:100px"></div>
-            <div><input type="checkbox" id="A3_13">手术，请勾选：-手术时年龄：<input id="A3_17" type="text" style="width:50px;">岁？</div>
-            <div style="position:absolute;bottom:0"><input type="checkbox" id="A3_18">其他治疗方式：<input id="A3_19" type="text" style="width:150px;">治疗时间：<input id="A3_20" type="text" style="width:50px;"></div>
+        <div>①<input type="checkbox" id="A3_1" parent="3" group="A" />未治疗过</div>
+        <div class="boldquestion">②<input type="checkbox" id="A3_2" />药物治疗</div>
+        <div class="paddingleft30">药物治疗方法：</div>
+        <div class="paddingleft40">a）药物名或种类：<input id="A3_3" type="text" style="width:100px" /></div>
+        <div class="paddingleft40">b）用药时间描述：<input id="A3_4" type="text" style="width:100px" /></div>
+        <div class="boldquestion">③<input type="checkbox" id="A3_5" />口腔矫正治疗</div>
+        <div class="paddingleft30">口腔矫正治疗方法，请勾选及填写：</div>
+        <div isunique="true">
+            <div class="paddingleft40">a）<input type="checkbox" id="A3_6" />牙齿矫正，开始时间:<input id="A3_7" type="text" style="width:100px" />,结束时间<input id="A3_8" type="text" style="width:100px" /></div>
+            <div class="paddingleft40">b）<input type="checkbox" id="A3_9" />扩弓治疗，开始时间:<input id="A3_10" type="text" style="width:100px" />,结束时间<input id="A3_11" type="text" style="width:100px" /></div>
+            <div class="paddingleft40">c）<input type="checkbox" id="A3_12" />其他口腔矫正方法：<input id="A3_13" type="text" style="width:100px" /></div>
         </div>
-        <div isunique="true" pElement="#A3_13">
-            <div><input type="checkbox" id="A3_14">扁桃体切除术</div>
-            <div><input type="checkbox" id="A3_15">腺样体切除术</div>
-            <div><input type="checkbox" id="A3_16">扁桃体+腺样体切除术</div>
-        </div>
+        <div>④<input type="checkbox" id="A3_14" />佩戴呼吸机</div>
+        <div class="paddingleft40">a）开始时间:<input id="A3_15" type="text" style="width:100px" /></div>
+        <div class="paddingleft40">b）结束时间<input id="A3_16" type="text" style="width:100px" /></div>
+        <div class="boldquestion">⑤<input type="checkbox" id="A3_17" />手术治疗</div>
+        <div class="paddingleft30">手术治疗方法：</div>
+        <div isunique="true"><div class="paddingleft40">a）请勾选术式:</div><div class="paddingleft40"><input type="checkbox" id="A3_18" />扁桃体切除术</div><div class="paddingleft40"><input type="checkbox" id="A3_19" />腺样体切除术</div><div class="paddingleft40"><input type="checkbox" id="A3_20" />扁桃体+腺样体切除术</div></div>
+        <div class="paddingleft40">b）手术时间：<input id="A3_21" type="month" style="width:150px" /></div>
+        <div class="boldquestion">⑥<input type="checkbox" id="A3_22" />其它方法：<input id="A3_23" type="text" style="width:100px" /></div>
         <br />
     </div>
     <div style="position: relative">
@@ -72,9 +87,7 @@
         <p>5.既往病史及治疗史：</p>
         <div isunique="true">①中耳炎：<input type="checkbox" id="A7_1" parent="7" desc="基本健康情况" group="A">无<input type="checkbox" id="A7_2">有，治疗方法<input id="A7_3" type="text" style="width:80px"></div>
         <div isunique="true">②化脓性扁桃体炎：<input type="checkbox" id="A7_10">无<input type="checkbox" id="A7_11">有，治疗方法<input id="A7_12" type="text" style="width:80px"></div>
-        <div isunique="true">鼻窦炎：<input type="checkbox" id="A7_13">无<input type="checkbox" id="A7_14">有，治疗方法<input id="A7_15" type="text" style="width:80px"></div>
         <div isunique="true">③鼻窦炎：<input type="checkbox" id="A7_4">无<input type="checkbox" id="A7_5">有，治疗方法<input id="A7_6" type="text" style="width:80px"></div>
-        <div isunique="true">哮喘：<input type="checkbox" id="A7_7">无<input type="checkbox" id="A7_8">有，治疗方法<input id="A7_9" type="text" style="width:80px"></div>
         <div isunique="true">④过敏性鼻炎：<input type="checkbox" id="A7_16">无<input type="checkbox" id="A7_17">有，治疗方法<input id="A7_18" type="text" style="width:80px"></div>
         <div isunique="true">⑤哮喘 ：<input type="checkbox" id="A7_19">无<input type="checkbox" id="A7_20">有，治疗方法<input id="A7_22" type="text" style="width:80px"></div>
         <div isunique="true">⑥急性喉炎：<input type="checkbox" id="A7_23">无<input type="checkbox" id="A7_24">有，治疗方法<input id="A7_26" type="text" style="width:80px"></div>
