--- a/问卷调查/Views/Home/Index.cshtml
+++ b/问卷调查/Views/Home/Index.cshtml
@@ -48,7 +48,9 @@
             <input type="hidden" id="hd_tName" />
 
             <div id="patinfo" class=""></div>
-
+            <div class="col-sm-1">
+                <button id="btnMode" class="btn btn-default hidden" onclick="ExchangeMode(this)"><span class="glyphicon glyphicon-eye-open"></span></button>
+            </div>
             <div id="container" class="" style="margin-top: 20px;">
 
             </div>
@@ -503,7 +505,7 @@
 
             return flag;
         }
-
+        
         function CheckNeedChildCkbox() {
             //IsUnique 下必须选择一项
             var result = false;
@@ -691,9 +693,11 @@
         function save() {
             var tableData = [];
             var tid = $('#hd_tId').val();
-            if (tid == 7 && !CheckNeedPZB()) return;
-            if (tid == 11 && !CheckNeedSF36()) return;
+            if (tid == 7 && !CheckNeedPZB()) return;            
+            if (tid == 8 && !CheckNeedJYZL()) return;
             if (tid == 9 && !CheckNeedJYZL()) return;
+            if (tid == 11 && !CheckNeedSF36()) return;
+
 
             var type = $('#hd_pattype').val();
             if (type == '2') {
@@ -751,12 +755,24 @@
 
         function del(id) {
             var pageNum = $('#pageLimit').bootstrapPaginator("getPages").current;
+                       
             $.post('/FormData/Del/' + id,
                 { pageNum: pageNum },
                 function (data) {
                     $('#container').html(data);
                     $('button.btn-show').removeClass('btn-show').addClass('hidden');
                 });
+        }
+
+        function delItem(id,obj) {
+            window.event? window.event.cancelBubble = true : e.stopPropagation();
+            if (confirm("确实要删除吗？")) {
+                $.post('/FormData/Delitem/' + id, function () {
+                    $(obj).closest('li').remove();
+                })
+            } else {
+                return false;
+            }
         }
 
         function execform() {
