--- a/问卷调查/Views/MobileChild/Entry.cshtml
+++ b/问卷调查/Views/MobileChild/Entry.cshtml
@@ -6,9 +6,9 @@
 
 <div style="text-align:center">
     <h1>请选择</h1>
-    <div style="margin-top:100px">
-        <a href="/Reservation/Index" class="btn btn-danger btn-primary"><font size="18">预约填写</font></a>
-    </div>
     <div style="margin-top:100px"><a href="/MobileChild/Index" class="btn btn-danger btn-primary"><font size="18">问卷调查</font></a></div>
+    <div style="margin-top:100px">
+        <a href="/Reservation/Index" class="btn btn-danger btn-primary"><font size="18">预约检查</font></a>
+    </div>
 </div>
 
